# ProutEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini
doc/: architecture.md  glsl_cheatsheet.md  roadmap.md
include/: EBO.hpp  VAO.hpp  VBO.hpp  autoRelease.hpp  camera.hpp  cameraController.hpp  mesh.hpp  model.hpp  modelBuilder.hpp  shader.hpp  shaderProgram.hpp  texture.hpp  textureManager.hpp
include/core/: application.hpp  timer.hpp  vertex.hpp  window.hpp
include/debug/: imguiLayer.hpp
include/input/: inputManager.hpp  signal.hpp
include/render/: EBO.hpp  VAO.hpp  VBO.hpp  gpuBuffer.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  shaderProgram.hpp  texture.hpp
include/scene/: entity.hpp  light.hpp  scene.hpp  transform.hpp
include/utils/: log.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
resources/models/monstre/: Monstre.mtl
resources/shaders/: fs_default.glsl  fs_depth.glsl  fs_light.glsl  vs_default.glsl  vs_light.glsl
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  cameraController.cpp  main.cpp  mesh.cpp  model.cpp  modelBuilder.cpp  shader.cpp  shaderProgram.cpp  texture.cpp  textureManager.cpp
src/core/: application.cpp  timer.cpp  window.cpp
src/debug/: imguiLayer.cpp
src/input/: inputManager.cpp
src/render/: EBO.cpp  VAO.cpp  VBO.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  shaderProgram.cpp  texture.cpp
src/scene/: light.cpp  scene.cpp  transform.cpp
src/utils/: log.cpp
